# openapi-mock-server

./: AGENTS.md  Cargo.toml  Justfile  README.md  initialize.sh  plan.md
src/: docs.rs  fake_gen.rs  initialize.rs  main.rs  mock_router.rs  state.rs
